src/components/home.module.css
.container{
    width: 70%;
    margin-left: 15%;
    overflow-x: hidden;
}

.search{
    border: 2px solid black;
    height: 24px;
    font-size: 1em;
    margin: 25px;
    margin-left: 50px;
    margin-right: 50px;
    width: calc(100% - 100px - 20px - 4px);
    padding: 10px;
    font-style: oblique;
    font-weight: bold;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    position: -webkit-sticky;
    position: sticky;
    top: 0;
}

.header{
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-content: stretch;
    align-items: center;
    margin-top: 12px;
}

.header_title{
    font-size: 4em;
    font-weight: bold;
    font-family: Impact, fantasy;
}

.header_description{
    width: 40%;
    margin-left: 24px;
    font-size: 1em;
    font-style: oblique;
    font-family: Verdana;
}

.bold {
    font-weight:bold;
}

@media (max-width: 768px) {
    .container{
        width: 100%;
        margin-left: 0%;
    }
    
    .header{
        flex-direction: column;
    }

    .header_description{
        width: 100%;
    }
}

.find_rep{
    text-align: center;
    font-size: 1em;
    font-style: oblique;
    font-family: Verdana;
}

